Fix bottom bar hidden on mobile due to autofocus

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -271,7 +271,7 @@ body {
   }
 
   @include mobile-screen {
-    &.keyboard-expanded .nav-main {
+    &.menu-toggled.keyboard-expanded .nav-main {
       height: calc(100% - #{$nav-header-height});
     }
   }
@@ -426,7 +426,7 @@ body {
   background:white;
   
   @include mobile-screen {
-    .site-nav.keyboard-expanded ~ & {
+    .site-nav.menu-toggled.keyboard-expanded ~ & {
       display: none;
     }
   }
